syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.university.auth.grpc";
option java_outer_classname = "AuthProto";

service AuthService {
  rpc ValidateToken (TokenRequest) returns (TokenResponse);
}

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  bool valid = 1;
  string role = 2;
}

